# LQR-Controller

./: .gitignore  AGENT.md  README.md  plan.md  proposal.md  run_lqr_sim.sh  session.md  tuning-log.md
.cursor/rules/: global.mdc  hardware.mdc  nav2-integration.mdc  simulation.mdc  tuning.mdc
.devcontainer/: Dockerfile  devcontainer.json  devcontainer.mac.json
.github/workflows/: deploy-pages.yml
config/: dwb_navfn_params.yaml  dwb_smac_params.yaml  lqr_navfn_params.yaml  lqr_smac_params.yaml  mppi_navfn_params.yaml  mppi_smac_params.yaml  nav2_params.yaml
docs/: 2026-03-23_project-setup-and-agents-md.md  2026-03-27_controller-bug-fixes.md  LQR_REFERENCE_ANALYSIS.md  metrics.md
output/run_1/: averages.txt  comparison.txt
output/run_2/: comparison.txt
output/run_4/: comparison.txt
recordings/dwb_navfn_run_1/: dwb_navfn_run_1_0.db3  metadata.yaml
recordings/dwb_navfn_run_2/: dwb_navfn_run_2_0.db3  metadata.yaml
recordings/dwb_navfn_run_3/: dwb_navfn_run_3_0.db3  metadata.yaml
recordings/dwb_run_1/: dwb_run_1_0.db3  metadata.yaml
recordings/dwb_run_2/: metadata.yaml
recordings/dwb_smac_run_1/: dwb_smac_run_1_0.db3  metadata.yaml
recordings/dwb_smac_run_2/: dwb_smac_run_2_0.db3  metadata.yaml
scripts/: benchmark_analysis.py  fake_robot_node.py  run_benchmarks.py
src/lqr_controller/: package.xml  (+2 more)
src/mppi_controller/: CMakeLists.txt  mppi_controller_plugin.xml  package.xml
src/mppi_controller/include/mppi_controller/: mppi_controller.hpp  mppi_solver.hpp
src/mppi_controller/src/: mppi_controller.cpp  mppi_solver.cpp
website/: index.html
(+40 files in other folders)
